--- a/ProxmoxAnsible/tasks/env.yml
+++ b/ProxmoxAnsible/tasks/env.yml
@@ -17,6 +17,8 @@
           - JARVIS_AUTH_X_CLIENT_SECRET
           - JARVIS_CF_DNS_API_TOKEN
           - JARVIS_CF_TUNNEL_TOKEN
+          - JARVIS_CF_R2_ENDPOINT
+          - JARVIS_CF_R2_TOKENS
           - JARVIS_DOMAIN
           - JARVIS_GITHUB_TOKEN_SSH
           - JARVIS_POSTGRES_PASSWORD
@@ -30,6 +32,74 @@
           JARVIS_TZ: 'Asia/Kolkata'
           JARVIS_CERT_RESOLVER: 'letsencrypt'
           JARVIS_COMMUNITY_SCRIPTS_URL: 'https://raw.githubusercontent.com/community-scripts/ProxmoxVE/main'
+          JARVIS_SERVICES:
+              homer:
+                  id: 247
+                  name: Homer
+                  subtitle: Dashboard
+                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/homer.png
+                  port: 80
+                  root_domain: true
+              jellyfin:
+                  id: 248
+                  name: Jellyfin
+                  subtitle: Media Server
+                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/jellyfin.png
+                  port: 8096
+                  subdomains: [media, jellyfin]
+              qbittorrent:
+                  id: 249
+                  name: qBittorrent
+                  subtitle: Torrent Client
+                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/qbittorrent.png
+                  port: 80
+                  subdomains: [torrent]
+              home:
+                  id: 250
+                  name: Home Assistant
+                  subtitle: Smart Home Automation
+                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/home-assistant.png
+                  port: 8123
+                  subdomains: [home]
+              pihole:
+                  id: 252
+                  name: Pihole
+                  subtitle: Network DNS & Ad Blocker
+                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/pi-hole.png
+                  port: 80
+                  path: /admin
+                  subdomains: [dns]
+                  middlewares: [pihole-redirect]
+              apps:
+                  id: 253
+                  name: Docker
+                  subtitle: Container Platform
+                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/docker.png
+                  port: 2375
+              traefik:
+                  id: 254
+                  name: Traefik
+                  subtitle: Reverse Proxy
+                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/traefik.png
+                  port: 8080
+                  subdomains: [proxy]
+                  is_internal: true
+              backrest:
+                  id: 255
+                  name: Backrest
+                  subtitle: Backup Manager
+                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/backrest.png
+                  port: 80
+                  subdomains: [backup]
+              proxmox:
+                  id: 200
+                  name: Proxmox
+                  subtitle: Virtualization Platform
+                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/proxmox.png
+                  port: 8006
+                  https: true
+                  subdomains: [pm]
+                  insecure: true
 
   block:
       - name: Ensure Doppler is Installed
