Add code server in deployment

--- a/ProxmoxAnsible/main.yml
+++ b/ProxmoxAnsible/main.yml
@@ -26,11 +26,14 @@
         include_tasks: 'tasks/system/{{ item }}.yml'
         loop: [update, automount]
 
+      - name: Deploy Docker LXC with Apps
+        include_tasks: 'tasks/docker/index.yml'
+
       - name: Deploy instances
         include_tasks: '{{ instance_file }}'
         loop: "{{ lookup('fileglob', playbook_dir + '/tasks/instances/*.yml', wantlist=True) | sort }}"
         vars:
-            skip: [apps]
+            skip: [home]
         when: (skip | map('regex_replace', '^(.*)$', '_\\1_') | select('in', instance_file) | list | length) == 0
         loop_control:
             loop_var: instance_file
