--- a/ProxmoxAnsible/tasks/env.yml
+++ b/ProxmoxAnsible/tasks/env.yml
@@ -34,11 +34,11 @@
           JARVIS_COMMUNITY_SCRIPTS_URL: 'https://raw.githubusercontent.com/community-scripts/ProxmoxVE/main'
           JARVIS_SERVICES:
               homer:
-                  id: 247
+                  id: 253
                   name: Homer
                   subtitle: Dashboard
                   logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/homer.png
-                  port: 80
+                  port: 8010
                   root_domain: true
               jellyfin:
                   id: 248
@@ -70,7 +70,7 @@
                   path: /admin
                   subdomains: [dns]
                   middlewares: [pihole-redirect]
-              apps:
+              docker:
                   id: 253
                   name: Docker
                   subtitle: Container Platform
@@ -85,12 +85,19 @@
                   subdomains: [proxy]
                   is_internal: true
               backrest:
-                  id: 255
+                  id: 253
                   name: Backrest
                   subtitle: Backup Manager
                   logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/backrest.png
-                  port: 80
+                  port: 9898
                   subdomains: [backup]
+              code:
+                  id: 253
+                  name: VS Code
+                  subtitle: Code Server
+                  logo: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/vscode.png
+                  port: 8888
+                  subdomains: [code]
               proxmox:
                   id: 200
                   name: Proxmox
